--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -2,6 +2,7 @@
   "promptDelete": false,
   "vimMode": false,
   "pdfExportSettings": {
+    "includeName": false,
     "pageSize": "Letter",
     "landscape": false,
     "margin": "0",
