--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -7,5 +7,11 @@
     "landscape": false,
     "margin": "0",
     "downscalePercent": 100
-  }
+  },
+  "showFrontmatter": true,
+  "trashOption": "local",
+  "newFileLocation": "current",
+  "newLinkFormat": "relative",
+  "showUnsupportedFiles": false,
+  "attachmentFolderPath": "./"
 }
