--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -13,5 +13,6 @@
   "newFileLocation": "current",
   "newLinkFormat": "relative",
   "showUnsupportedFiles": false,
-  "attachmentFolderPath": "./"
+  "attachmentFolderPath": "./assets",
+  "alwaysUpdateLinks": false
 }
