--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -14,5 +14,6 @@
   "newLinkFormat": "relative",
   "showUnsupportedFiles": false,
   "attachmentFolderPath": "./assets",
-  "alwaysUpdateLinks": false
+  "alwaysUpdateLinks": false,
+  "spellcheck": false
 }
