--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -14,6 +14,7 @@
   "newLinkFormat": "relative",
   "showUnsupportedFiles": false,
   "attachmentFolderPath": "./assets",
-  "alwaysUpdateLinks": false,
-  "spellcheck": false
+  "alwaysUpdateLinks": true,
+  "spellcheck": false,
+  "showLineNumber": true
 }
