--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -4,7 +4,7 @@
   "baseFontSize": 13,
   "interfaceFontFamily": "",
   "monospaceFontFamily": "Menlo",
-  "textFontFamily": "Songti SC",
+  "textFontFamily": "",
   "translucency": false,
   "cssTheme": "Minimal"
 }
